# omrbench

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  cli.md  conftest.py  omrbench.toml.example  pyproject.toml  serve.md  tech_overview.md
.github/workflows/: tests.yml
corpora/: README.md
corpus/real/: README.md
corpus/synthetic/: README.md
corpus/synthetic/fun/0001/: meta.yaml  reference.musicxml
corpus/synthetic/fun/0002/: meta.yaml  reference.musicxml
corpus/tier1_synthetic/: README.md
corpus/tier2_real/: README.md
omrbench/: __init__.py  augment.py  cli.py  corpus.py  engines.py  proc.py  records.py  runs.py  scoring.py
omrbench/adapters/: __init__.py  audiveris.py  base.py  homr.py
omrbench/fetch/: grandstaff.py  polish_scores.py
omrbench/score/: __init__.py  base.py  music21_metric.py  omr_ned.py  report.py
omrbench/server/: __init__.py  app.py  jobs.py  metrics_doc.py  proc.py  runs_jobs.py
omrbench/server/static/: app.js  index.html  style.css
results/homr/: 20260614T211232Z.json
tests/: helpers.py  test_audiveris_adapter.py  test_augment.py  test_corpus.py  test_engines.py  test_jobs.py  test_music21_metric.py  test_proc.py  test_records.py  test_report.py  test_runs.py  test_score_registry.py  test_scoring.py
