[project]
name = "omrbench"
version = "0.0.1"
description = "Tool-independent ground-truth benchmark for Optical Music Recognition (OMR)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Martin Dudek" }]
dependencies = [
    "music21>=9.1",
    "editdistance>=0.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only needed to download the polish-scores real corpus.
fetch = ["datasets>=2.18", "huggingface_hub>=0.23", "pillow>=10.0"]
# Only needed for `--metric omr-ned`; musicdiff pulls in converter21 + numpy.
omr-ned = ["musicdiff>=5.2"]
# Only needed for the local web UI (`omrbench serve`). The frontend (Verovio,
# Chart.js) loads from CDN in the browser, so no extra Python deps for it.
# python-multipart backs the corpus sample-upload form; tomlkit round-trips
# omrbench.toml when the Engines page edits it (preserving its comments).
serve = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "tomlkit>=0.12"]
# Only needed for `omrbench augment` (synthetic-corpus image degradation).
augment = ["pillow>=10.0"]
# Everything a user might want, in one shot (omits the test-only `dev` extra).
all = ["omrbench[fetch,omr-ned,serve,augment]"]
# Only needed to run the test suite (`pytest`). Augment tests need Pillow; the
# engine-config tests round-trip omrbench.toml through tomlkit (the serve extra's
# dep), so it must be present for `pip install -e '.[dev]'` to give a green run.
dev = ["pytest>=8.0", "pillow>=10.0", "tomlkit>=0.12"]

[project.scripts]
omrbench = "omrbench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["omrbench*"]

[tool.setuptools.package-data]
"omrbench.server" = ["static/*"]
